# llm

./: .gitignore  README.md
mistral/dpo/: config.py  data_utils.py  dpo_inference.py  dpo_trainer.py
mlx-grpo/: .gitignore  README.md  pyproject.toml
mlx-grpo/src/mlx_grpo/: __init__.py  chat.py  config.py  run.py  trainer.py  utils.py
moe/: README.md  moe_model.py  train.py
qwen3/: __init__.py  config.py  demo.py  example.py  generation.py  layers.py  model.py  positional_encoding.py  reasoning_finetune.py  test_qwen3.py  tokenizer.py  utils.py
qwen3/unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
zephyr/finetune_gptq/: config.py  finetuned_inference.py  prompt_utils.py  zephyr_trainer.py
